[package]
name = "unnamed-sdl-project"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.18.0"
rand = "0.8.5"
rayon = "1.5.3"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]
